--- a/master/src/main/resources/application.properties
+++ b/master/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8080
 spring.datasource.url = jdbc:mysql://localhost:3306/kts?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username =root
-spring.datasource.password =root
+spring.datasource.password =mysqlroot
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 # Ukoliko se ide update , ovo ispod treba komentarisati
