--- a/master/src/main/resources/application.properties
+++ b/master/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8080
 spring.datasource.url = jdbc:mysql://localhost:3306/kts?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username =root
-spring.datasource.password =mysqlroot
+spring.datasource.password =root
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 # Ukoliko se ide update , ovo ispod treba komentarisati
@@ -41,9 +41,5 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-#spring.mail.host 	 = smtp.gmail.com
-#spring.mail.username = mihajlomiskjovkovic@gmail.com
-#spring.mail.password = miskmisk
-#spring.mail.port	 = 587
 
 
