--- a/master/src/main/resources/application.properties
+++ b/master/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port = 8080
+server.port = 8081
 spring.datasource.url = jdbc:mysql://localhost:3306/kts?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username =root
-spring.datasource.password =root
+spring.datasource.password =bit1212
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
 # Ukoliko se ide update , ovo ispod treba komentarisati
