--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -90,7 +90,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "../node_modules/ngx-drag-to-select/ngx-drag-to-select.css"
             ],
             "scripts": []
           }
