--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,14 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-selectable": "0.0.8",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
     "ng-init": "^4.0.1",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-drag-to-select": "^3.1.1",
     "rxjs": "~6.4.0",
+    "selectable.js": "^0.17.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
