--- a/master/src/main/resources/application.properties
+++ b/master/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.datasource.url = jdbc:mysql://localhost:3306/kts?useSSL=false&createDatab
 spring.datasource.username =root
 spring.datasource.password =root
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 # Ukoliko se ide update , ovo ispod treba komentarisati
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
