--- a/master/src/main/resources/application.properties
+++ b/master/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port = 8081
 spring.datasource.url = jdbc:mysql://localhost:3306/kts?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username =root
-spring.datasource.password =root
+spring.datasource.password =bit1212
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 # Ukoliko se ide update , ovo ispod treba komentarisati
-#pring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
